--- a/cheems-Mems/src/main/resources/application.properties
+++ b/cheems-Mems/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=9999
+server.port=8080
 spring.jpa.database=mysql 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/prueba_conexion
+spring.datasource.url=jdbc:mysql://localhost:3306/cheems-mems
 spring.datasource.username=root
-spring.datasource.password=2014110239
+spring.datasource.password=Mart&n625K$10
