--- a/cheems-Mems/src/main/resources/application.properties
+++ b/cheems-Mems/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/cheems-mems
 spring.datasource.username=root
 spring.datasource.password=Mart&n625K$10
+spring.main.allow-circular-references=true
